Bug 1647109 - Set the child history as in process when the BC is in process r=kmag

Differential Revision: https://phabricator.services.mozilla.com/D82367